--- a/css/style.css
+++ b/css/style.css
@@ -178,8 +178,8 @@ a:hover, a:active {
     border: 2px solid #333333;
 }
 .hero-content .btn:hover, .hero-content .btn:active {
-    background: #333333;
-    color: #F1F1F1;
+    background: #08ce3d;
+    color: #5113ee;
     border: 2px solid #666666;
 }
 
