--- a/css/style.css
+++ b/css/style.css
@@ -106,6 +106,25 @@ body {
     
 }
 
+.contact-container {
+    color: #F1F1F1;
+    background: #1b1b27;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 8px 0;
+}
+.contact-content {
+    color: #F1F1F1;
+    width: 100%;
+    max-width: 1000px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 12px;
+}
+
 .footer-container {
     background: #1b1b27;
     display: flex;
